syntax = "proto3";
package grpc.hello;
option java_multiple_files = true;
option java_package = "grpc.hello";
option java_outer_classname = "HelloServiceProto";

message HelloRequest{
  string name = 1;
}

message HelloResponce{
  string name = 1;
}

service HelloService{
  rpc hello(HelloRequest) returns (HelloResponce);
}